--- a/src/main/resources/templates/progress/teamList.html
+++ b/src/main/resources/templates/progress/teamList.html
@@ -5,22 +5,25 @@
 <body>
 <div th:insert="fragments/organizerHeader :: header(teamView)"></div>
 <div class="container">
-    <div class="row">
-        <div class="col-sm-12" th:unless="${allTeamsStarted}">
-            <a href="#" class="btn btn-primary" th:href="@{/game/progress/startGame}">
-                Zahájit hru všem týmům!
-            </a>
+    <th:block th:unless="${teams.isEmpty()}">
+        <div class="row">
+            <div class="col-sm-12" th:unless="${allTeamsStarted}">
+                <a href="#" class="btn btn-primary" th:href="@{/game/progress/startGame}">
+                    Zahájit hru všem týmům!
+                </a>
+            </div>
+            <div class="col-sm-12" th:if="${allTeamsStarted}">
+                <p class="big-centered-text"> Všechny týmy již zahájily hru!</p>
+            </div>
         </div>
-        <div class="col-sm-12" th:if="${allTeamsStarted}">
-            <p class="big-centered-text"> Všechny týmy již zahájily hru!</p>
+        <div class="row">
+            <p th:text="'Týmy se nacházejí na stanovištích ' + ${minMaxStages.getMin()} + '-' + ${minMaxStages.getMax()}">
+            </p>
         </div>
-    </div>
-    <div class="row">
-        <p th:text="'Týmy se nacházejí na stanovištích ' + ${teamsGameState}"></p>
-    </div>
-    <div class="row">
-        <p th:text="'Počet týmů, které mají doluštěno je ' + ${teamsFinished}"></p>
-    </div>
+        <div class="row">
+            <p th:text="'Počet týmů, které mají doluštěno je ' + ${teamsFinished}"></p>
+        </div>
+    </th:block>
     <div class="row">
         <div class="col-sm-12">
             <h1>Týmy</h1>
