--- a/src/main/resources/templates/score/list.html
+++ b/src/main/resources/templates/score/list.html
@@ -32,8 +32,8 @@
                     </td>
                     <td class="col-centered">
                         <a href="#"
-                           class="btn btn-default btn-lg" th:href="@{/game/score/team(teamId=${teamWithScore.team.teamId})}">
-                            Detail skóre
+                           class="btn btn-default flat" th:href="@{/game/score/team(teamId=${teamWithScore.team.teamId})}">
+                            Detail
                         </a>
                     </td>
                 </tr>
