--- a/src/main/resources/templates/progress/teamList.html
+++ b/src/main/resources/templates/progress/teamList.html
@@ -46,10 +46,11 @@
                 <p>Žádný tým nenalezen<p/>
             </div>
 
-            <div th:each="team : ${teams}" class="cypher organizer">
-                <a th:href="@{/game/progress/teamDetail(teamId=${team.teamId})}">
+            <div th:each="teamProgress : ${teamsProgress}" class="cypher organizer">
+                <a th:href="@{/game/progress/teamDetail(teamId=${teamProgress.team.teamId})}">
                     <div class="row align-items-center">
-                        <div th:text="${team.name}" class="col"></div>
+                        <div th:text="${teamProgress.getTeam().getName()}" class="col"></div>
+                        <div th:text="${teamProgress.getTeamProgress()}" class="col"></div>
                     </div>
                 </a>
             </div>
