--- a/src/main/resources/templates/progress/teamDetail.html
+++ b/src/main/resources/templates/progress/teamDetail.html
@@ -7,7 +7,8 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-12">
-            <h2 th:text="${team.name}"></h2>
+            <h1>Tým</h1>
+            <p class="subheading" th:text="${team.name}"></p>
 
             <div th:each="cypher : ${cyphers}" class="cypher organizer">
                 <th:block th:with="status=${cyphersStatuses.get(cypher.cypherId)}">
