Add hint card fix css style

--- a/src/main/resources/templates/client/fragments/header.html
+++ b/src/main/resources/templates/client/fragments/header.html
@@ -24,7 +24,7 @@
                     <a class="nav-link" href="/cypher">Šifry </a>
                 </li>
                 <li class="nav-item" th:classappend="${activeTab == 'card'}? 'active' : null">
-                    <a class="nav-link" href="/card">Kartička</a>
+                    <a class="nav-link" target="_blank" href="/img/hintcard.jpg">Kartička</a>
                 </li>
                 <li class="nav-item" th:classappend="${activeTab == 'contact'}? 'active' : null">
                     <a class="nav-link" href="/contact">Kontakty</a>
