--- a/src/main/resources/templates/score/list.html
+++ b/src/main/resources/templates/score/list.html
@@ -5,40 +5,37 @@
 <body>
 <div th:insert="fragments/organizerHeader :: header(score)"></div>
 <div class="container">
-    <h2>Pořadí týmů podle skóre</h2>
-    <div class="table-responsive">
-        <table class="table table-striped">
-            <thead>
-            <tr>
-                <th class="col-centered">Id týmu</th>
-                <th class="col-centered">Jméno týmu</th>
-                <th class="col-centered">Skóre</th>
-                <th class="col-centered">Akce</th>
-            </tr>
-            <tr th:if="${teamsWithScores.empty}">
-                <td colspan="4"><p> V systému nejsou týmy</p></td>
-            </tr>
-            </thead>
-            <th:block th:each="teamWithScore : ${teamsWithScores}">
-                <tr>
-                    <td th:text="${teamWithScore.team.teamId}" class="col-centered">1</td>
-                    <td th:text="${teamWithScore.team.name}" class="col-centered">Borci</td>
-                    <td class="col-centered">
+    <p class="big-centered-text">Pořadí týmů podle skóre</p>
+    <div class="row score-header">
+        <div class="col">
+            <p>Id týmu</p>
+        </div>
+        <div class="col">
+            <p>Jméno týmu</p>
+        </div>
+        <div class="col">
+            <p>Skóre</p>
+        </div>
+    </div>
 
-                        <span th:if="${teamWithScore.team.teamId != null}"
-                              th:text="${teamWithScore.score}">
-                        </span>
+    <div th:if="${teamsWithScores.empty}">
+        <p>V systému nejsou týmy</p>
+    </div>
+    <div th:each="teamWithScore : ${teamsWithScores}" class="score">
+        <a th:href="@{/game/score/team(teamId=${teamWithScore.team.teamId})}">
+            <div class="row align-items-center">
+                <div class="col" th:text="${teamWithScore.team.teamId}">
+                </div>
 
-                    </td>
-                    <td class="col-centered">
-                        <a href="#"
-                           class="btn btn-default flat" th:href="@{/game/score/team(teamId=${teamWithScore.team.teamId})}">
-                            Detail
-                        </a>
-                    </td>
-                </tr>
-            </th:block>
-        </table>
+                <div class="col" th:text="${teamWithScore.team.name}">
+                </div>
+
+                <th:block th:if="${teamWithScore.team.teamId != null}">
+                    <div class="col" th:text="${teamWithScore.score}">
+                    </div>
+                </th:block>
+            </div>
+        </a>
     </div>
 </div>
 
