--- a/src/main/resources/templates/progress/stage.html
+++ b/src/main/resources/templates/progress/stage.html
@@ -7,7 +7,25 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-12">
+            <h1 th:text="${cypher.name}"></h1>
+            <div class="col-sm-6">
+                <div class="accordion" id="codewordAccordion">
+                    <div class="card">
+                        <div class="card-header" id="headingOne" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                            Zobrazit řešení šifry
+                        </div>
+                        <div th:text="${cypher.codeword}" id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#codewordAccordion">
 
+                        </div>
+                    </div>
+                    <div class="card">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-12">
             <form class="col-sm-6" action="#" th:action="@{/game/progress/stage}" method="get">
                 <div class="form-group">
                     <input name="cypherId" th:value="*{cypher.cypherId}" hidden/>
@@ -19,10 +37,13 @@
             <div class="col-sm-6" th:if="${search != '' and search != null}">
                 <a href="#" th:href="@{/game/progress/stage(cypherId=${cypher.cypherId})}" class="btn btn-secondary">Zobrazit všechny týmy</a>
             </div>
-            <br>
-            <h1 th:text="${cypher.name}"></h1>
-            <button id="codeword-show" class="btn btn-primary" onclick="changeCodewordVisibility()">Zobrazit řešení</button>
-            <p id="codeword" th:text="${cypher.codeword}"></p>
+        </div>
+    </div>
+    <!--                <button id="codeword-show" class="btn btn-primary" onclick="changeCodewordVisibility()">Zobrazit řešení</button>-->
+    <!--                <p id="codeword" th:text="${cypher.codeword}"></p>-->
+    <div class="row">
+        <div class="col-sm-12">
+
             <h2>Týmy</h2>
             <div th:if="${teams.empty and search == null}">
                 <p>V systému nejsou týmy<p/>
