Change layouts and button styles

--- a/src/main/resources/templates/fragments/organizerHeader.html
+++ b/src/main/resources/templates/fragments/organizerHeader.html
@@ -20,7 +20,7 @@
                         <a class="nav-link" href="/game/progress/teamsList">Přehled týmů</a>
                     </li>
                     <li class="nav-item" th:class="${activeTab == 'score'}? 'active' : null">
-                        <a class="nav-link" href="/game/score">Score</a>
+                        <a class="nav-link" href="/game/score">Skóre</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/logout" th:onclick="return confirm('Opravdu se chcete odhlásit?')">Odhlásit se</a>
