--- a/src/main/resources/templates/score/team.html
+++ b/src/main/resources/templates/score/team.html
@@ -5,8 +5,8 @@
 <body>
 <div th:insert="fragments/organizerHeader :: header(score)"></div>
 <div class="container">
-    <h1>Tým <span th:text="${team.name}"></span> - Stav</h1>
-    <h2>Šifry:</h2>
+    <h1>Tým <span th:text="${team.name}"></span></h1>
+    <h2>Přehled</h2>
     <div class="table-responsive">
         <table class="table table-bordered">
             <thead>
