--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -119,10 +119,6 @@ nav .back {
     background-color: #EEE;
 }
 
-.score .row div{
-    text-align: center;
-}
-
 .score-header {
     border-bottom: solid 1px #E5E5E5;
 }
@@ -130,8 +126,12 @@ nav .back {
 .score-header .col p{
     color:black;
     font-weight: 600;
-    text-align: center;
     font-size: 1rem;
+}
+
+.row .identifier, .row .points {
+    -ms-flex: 0 0 5rem;
+    flex: 0 0 5rem;
 }
 
 .cypher .row {
@@ -275,10 +275,6 @@ span.status {
     background-color: #0095ff;
 }
 
-#bonus-info {
-    display: none;
-}
-
 #bonus-info p{
     font-style: italic;
     font-size: 0.9rem;
@@ -350,12 +346,16 @@ a:hover{
     -webkit-box-shadow: 0px 3px 16px 2px rgba(0, 0, 0, 0.42);
     -moz-box-shadow: 0px 3px 16px 2px rgba(0, 0, 0, 0.42);
     box-shadow: 0px 3px 16px 2px rgba(0, 0, 0, 0.42);
+    background-color: white;
+    color: rgb(237, 24, 72);
 }
 
 .container .row .btn-primary:hover {
     -webkit-box-shadow: 0px 3px 16px 2px rgba(0, 0, 0, 0.42);
     -moz-box-shadow: 0px 3px 16px 2px rgba(0, 0, 0, 0.42);
     box-shadow: 0px 3px 16px 2px rgba(0, 0, 0, 0.42);
+    background-color: rgb(237, 24, 72);
+    color: #FFF;
 }
 
 .container .row .btn-solve,
@@ -402,6 +402,17 @@ a:hover{
     color: #757575;
     margin-top: 1.25rem;
     text-align: center;
+}
+
+.form-control:focus {
+    border-color: rgba(237, 24, 72, 0.5);
+    outline: 0;
+    box-shadow: 0 0 0 0.2rem rgba(237, 24, 72, 0.25);
+}
+
+.btn.focus, .btn:focus {
+    outline: 0;
+    box-shadow: 0 0 0 0.2rem rgba(237, 24, 72, 0.25);
 }
 
 td .btn-default {
@@ -486,6 +497,7 @@ td .btn-default {
 .alert-danger.red {
     background-color: rgb(237, 24, 72);
     color: white;
+    border: none;
 }
 
 .col-centered {
