--- a/src/main/resources/templates/client/cypher/detail.html
+++ b/src/main/resources/templates/client/cypher/detail.html
@@ -60,8 +60,7 @@
                                role="button">Zobrazit další šifru </a>
                         </div>
 
-                        <button id="bonus-button" th:if="${cypher.bonusContent}" class="btn btn-secondary" onclick="showBonus()">Zobrazit bonusové informace</button>
-                        <div id="bonus-info">
+                        <div th:if="${cypher.bonusContent != null and cypher.bonusContent != ''}" id="bonus-info">
                             <h2>Bonusové informace</h2>
                             <p th:text="${cypher.bonusContent}" class="alert alert-light" role="alert"></p>
                         </div>
@@ -111,14 +110,6 @@
             </div>
         </th:block>
 
-        <script>
-            function showBonus() {
-                var bonusInfo = document.getElementById("bonus-info");
-                bonusInfo.style.display = "block";
-                var bonusButton = document.getElementById("bonus-button");
-                bonusButton.style.display = "none";
-            }
-        </script>
         <script>
             var map,
                 activeMarker;
