--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -4,27 +4,31 @@
 </head>
 <body class="login-page-body">
     <div class="container">
-        <h1 class="login-form-header">Luštěniny</h1>
+        <div class="row">
+            <div class="col-sm-12">
+                <h1 class="login-form-header">Luštěniny</h1>
 
-        <form action="/login" method="post">
-            <!--<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>-->
+                <form action="/login" method="post">
+                    <!--<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>-->
 
-            <div class="form-group">
-                <label for="username" class="login-form-label">Uživatelské jméno</label>
-                <input type="text" class="form-control" id="username" name="username" autofocus/>
+                    <div class="form-group">
+                        <label for="username" class="login-form-label">Uživatelské jméno</label>
+                        <input type="text" class="form-control" id="username" name="username" autofocus/>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="password" class="login-form-label">Heslo</label>
+                        <input type="password" class="form-control" id="password" name="password"/>
+                    </div>
+
+                    <div class="login-form-error-wrapper">
+                        <span th:if="${param.error != null}" class="login-form-error">Přihlášení se nezdařilo.</span>
+                    </div>
+
+                    <button type="submit" class="btn btn-primary">Přihlásit</button>
+                </form>
             </div>
-
-            <div class="form-group">
-                <label for="password" class="login-form-label">Heslo</label>
-                <input type="password" class="form-control" id="password" name="password"/>
-            </div>
-
-            <div class="login-form-error-wrapper">
-                <span th:if="${param.error != null}" class="login-form-error">Přihlášení se nezdařilo.</span>
-            </div>
-
-            <button type="submit" class="btn btn-secondary btn-block login-form-submit-btn">Přihlásit</button>
-        </form>
+        </div>
     </div>
     <div class="login-footer">
         <img src="../../static/img/cngroup-logo.png" th:src="@{/img/cngroup-logo.png}" alt="CN Group Zlin" />
