--- a/src/main/resources/templates/progress/stage.html
+++ b/src/main/resources/templates/progress/stage.html
@@ -6,7 +6,7 @@
 <div th:insert="fragments/organizerHeader :: header(progress)"></div>
 <div class="container">
     <div class="row">
-        <div class="col-sm-6">
+        <div class="col-sm-12 col-md-6">
             <h1 th:text="${cypher.name}"></h1>
             <div class="accordion" id="codewordAccordion">
                 <div class="card">
@@ -22,7 +22,7 @@
         </div>
     </div>
     <div class="row">
-        <form class="col-sm-6" action="#" th:action="@{/game/progress/stage}" method="get">
+        <form class="col-sm-12 col-md-6" action="#" th:action="@{/game/progress/stage}" method="get">
             <div class="form-group">
                 <input name="cypherId" th:value="*{cypher.cypherId}" hidden/>
                 <label for="search">Hledat tým:</label>
