--- a/src/main/resources/templates/contact/form.html
+++ b/src/main/resources/templates/contact/form.html
@@ -28,14 +28,19 @@
                     <p class="error" th:if="${#fields.hasErrors('phoneNumber')}" th:errors="*{phoneNumber}">PhoneNumber error.</p>
                 </div>
                 <div class="form-group">
+                    <label for="email">E-mail</label>
+                    <input id="email" class="form-control" th:field="*{email}"/>
+                    <p class="error" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">PhoneNumber error.</p>
+                </div>
+                <div class="form-group">
                     <label for="web">Web</label>
-                    <input id="web" class="form-control" th:field="*{webPages}"/>
-                    <p class="error" th:if="${#fields.hasErrors('webPages')}" th:errors="*{webPages}">webPages error.</p>
+                    <input id="web" class="form-control" th:field="*{webAddress}"/>
+                    <p class="error" th:if="${#fields.hasErrors('webAddress')}" th:errors="*{webAddress}">webAddress error.</p>
                 </div>
                 <div class="form-group">
                     <label for="facebook">Facebook událost</label>
-                    <input id="facebook" class="form-control" th:field="*{fcbEvent}"/>
-                    <p class="error" th:if="${#fields.hasErrors('fcbEvent')}" th:errors="*{fcbEvent}">fcbEvent error.</p>
+                    <input id="facebook" class="form-control" th:field="*{facebookEvent}"/>
+                    <p class="error" th:if="${#fields.hasErrors('facebookEvent')}" th:errors="*{facebookEvent}">facebookEvent error.</p>
                 </div>
                 <button type="submit" class="btn btn-primary">Uložit</button>
             </form>
