GH-318 [Feature] Store image URL for the hint

--- a/src/main/resources/templates/client/cypher/detail.html
+++ b/src/main/resources/templates/client/cypher/detail.html
@@ -89,6 +89,8 @@
                             <p>
                                 <span class="hint-label" th:text="|Nápověda (-${hintTaken.hint.value}b.):|"></span>
                                 <span th:text="${hintTaken.hint.text}"></span>
+                                <br />
+                                <img th:if="${hintTaken.hint.imageUrl}" alt="Obrázek nápovědy" src="" th:src="@{${hintTaken.hint.imageUrl}}" />
                             </p>
                         </div>
                     </th:block>
