Implement Rank service and render ranking of teams

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -129,7 +129,7 @@ nav .back {
     font-size: 1rem;
 }
 
-.row .identifier, .row .points {
+.row .points, .row .order{
     -ms-flex: 0 0 5rem;
     flex: 0 0 5rem;
 }
