Fix review comments

--- a/src/main/resources/templates/client/contact.html
+++ b/src/main/resources/templates/client/contact.html
@@ -13,7 +13,7 @@
             <ul class="contact">
                 <li>
                     <i class="fas fa-phone"></i>
-                    <span th:text="${contact.phoneNumber}">email@email.com</span>
+                    <span th:text="${contact.phoneNumber}">777123456</span>
                 </li>
                 <li>
                     <i class="fas fa-envelope"></i>
