--- a/src/main/resources/templates/contact/form.html
+++ b/src/main/resources/templates/contact/form.html
@@ -30,7 +30,7 @@
                 <div class="form-group">
                     <label for="email">E-mail</label>
                     <input id="email" class="form-control" th:field="*{email}"/>
-                    <p class="error" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">PhoneNumber error.</p>
+                    <p class="error" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Email error.</p>
                 </div>
                 <div class="form-group">
                     <label for="web">Web</label>
