--- a/src/main/resources/templates/client/fragments/header.html
+++ b/src/main/resources/templates/client/fragments/header.html
@@ -5,9 +5,9 @@
 <body>
 <div th:fragment="header(activeTab, parentScreen)">
     <nav class="navbar navbar-default navbar-red">
-        <button th:unless="${parentScreen} == ''" class="btn back" type="button">
-            <a th:href="${parentScreen}"><i class="fas fa-chevron-left text-white"></i></a>
-        </button>
+        <a th:unless="${parentScreen} == ''"  th:href="${parentScreen}" class="btn back" type="button">
+            <i class="fas fa-chevron-left text-white"></i>
+        </a>
 
         <div class="navbar-content">
             <p class="team-name" th:text="${team.name}"></p>
