GH-330 [Fix] Include just min jquery instead of slim version

--- a/src/main/resources/templates/progress/getHintList.html
+++ b/src/main/resources/templates/progress/getHintList.html
@@ -79,7 +79,7 @@
     </div>
 </div>
 
-<div th:insert="fragments/externalScripts :: externalScripts"></div>
+<th:block th:include="fragments/externalScripts :: externalScripts" />
 <script th:inline="javascript">
     /*<![CDATA[*/
     var teamId = /*[[${team.teamId}]]*/ "teamId",
